<resources>
    <string name="app_name">HMS</string>
    <string name="hms">HMS</string>
    <string name="Email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_login">User Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_activity_user_panel">UserPanel</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin_panel">AdminPanel</string>
    <string name="have_an_account_sign_in">Have an Account? Sign In</string>
    <string name="register_now">Register now</string>
    <string name="address">Address</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fathers_name">Fathers Name</string>
    <string name="full_name">Full Name</string>
    <string name="register_nowBanner">Register Now</string>
    <string name="create_an_account">Create an account</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_age">Patient Age</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_doctors">Add Doctors</string>
    <string name="gender">Gender</string>
    <string name="appointment_book">Appointment Book</string>
    <string name="patient_names">Patient Name</string>
    <string name="patient_ages">Patient Age</string>
    <string name="patient_gender">Patient Gender</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="date">Date</string>
    <string name="jan_01_2020">Jan 01 2020</string>
    <string name="doctor_specialist">Doctor Specialist</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="dd_mm_yyy">DD MM YYY</string>
    <string name="logo">Logo</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="check_appointments">Check Appointments</string>


    <string-array name="Specialist">
        <item>General Physician</item>
        <item>Neurologists</item>
        <item>Dentist</item>
        <item>Dermatologists</item>
        <item>Infectious disease doctors</item>
        <item>Ophthalmologists</item>
        <item>Cardiologists</item>
    </string-array>
</resources>