<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor"
    android:padding="12dp">


    <TextView
        android:id="@+id/app_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:shadowColor="#50272F"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="50"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:text="@string/appointment_book"
        />

    <EditText
        android:id="@+id/P_name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_book"
        android:layout_marginTop="17dp"
        android:hint="@string/patient_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/P_age"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/P_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/patient_age"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/P_gender"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/P_age"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/patient_gender"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/d_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/P_gender"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/doctor_name"
        android:textColor="#000000"
        android:textSize="17sp"
        android:paddingStart="4dp"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/P_gender"
        android:layout_marginStart="13dp"
        android:layout_marginTop="-8dp"
        android:layout_toEndOf="@+id/d_name"
        android:minHeight="5dp" />

    <TextView
        android:id="@+id/d_special_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/d_name"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:layout_marginStart="4dp"
        android:text="@string/doctor_specialist"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/d_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spin"
        android:layout_marginStart="21dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/d_special_head"
        android:paddingStart="4dp"
        android:textColor="#000000"
        android:textSize="17sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/d_special_head"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="17sp"
        android:paddingStart="4dp"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/d_special_head"
        android:layout_marginStart="26dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/date"
        android:text="@string/dd_mm_yyy" />

    <Button
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/d_special_head"

        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#BA3C55"
        android:text="@string/book_appointment" />

</RelativeLayout>