<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="#EA80FC"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hms"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:id="@+id/edt_txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/black"



            />

        <EditText
            android:id="@+id/edt_txt_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"


        >
        <!--login btn of user-->



        <Button
            android:id="@+id/user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            tools:ignore="ButtonStyle" />

        <!--login btn of admin-->

        <Button
            android:id="@+id/admin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:layout_margin="5dp"

            tools:ignore="ButtonStyle" />




    </LinearLayout>


</LinearLayout>