<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:shadowColor="#50272F"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="50"
        android:text="@string/add_doctors"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="fill_vertical"
        android:orientation="vertical">

    <EditText
        android:id="@+id/txtDocName"
        android:drawableStart="@drawable/ic_person"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#000000" />


        <EditText
            android:id="@+id/DocEmail"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/DocPhone"
            android:drawableStart="@drawable/ic_contact"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#040404" />

        <EditText
            android:id="@+id/DocAge"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/txtDocGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"/>


       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_male"
            android:onClick="onRadioButtonClicked"
            android:text="@string/male"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableStart="@drawable/ic_femlae"
            android:onClick="onRadioButtonClicked"
            android:text="@string/female"
            android:textColor="#FFFFFF" />

        </LinearLayout>-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Specialist"
            android:inputType="text"
            android:textSize="17dp"
            android:textColor="#000000"
            />

        <Spinner
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DocSpecialist"
            />

</LinearLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginLeft="130dp"
        android:id="@+id/btnAddDco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="#BA3C55"
        android:text="Add Doctor"


        />

</LinearLayout>